--- a/index.html
+++ b/index.html
@@ -11,58 +11,42 @@
         <link href="resources/photon-geocoder-autocomplete.min.css" rel="stylesheet">
         <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
         <link rel="stylesheet" href="./resources/qgis2web.css">
-        <style>
-        html, body {
-            background-color: #ffffff;
-        }
-        .ol-control > * {
-            background-color: #f8f8f8!important;
-            color: #444444!important;
-            border-radius: 0px;
-        }
-        .ol-attribution a, .gcd-gl-input::placeholder, .search-layer-input-search::placeholder {
-            color: #444444!important;
-        }
-        .search-layer-input-search {
-            background-color: #f8f8f8!important;
-        }
-        .ol-control > *:focus, .ol-control >*:hover {
-            background-color: rgba(248, 248, 248, 0.7)!important;
-        } 
-        .ol-control {
-            background-color: rgba(255,255,255,.4) !important;
-            padding: 2px !important;
-        } 
-        </style>
-         
-        <style>
-        html, body, #map {
-            width: 100%;
-            height: 100%;
-            padding: 0;
-            margin: 0;
-        }
-        </style>
-        <title></title>
+        <link rel="stylesheet" href="./resources/site.css">
     </head>
     <body>
-        <div id="map">
-            <div id="popup" class="ol-popup">
-                <a href="#" id="popup-closer" class="ol-popup-closer"></a>
-                <div id="popup-content"></div>
+        <div class="container">
+            
+            <!--Grid column 1-->
+            <div id="map">
             </div>
-        </div>
-        <script src="resources/qgis2web_expressions.js"></script>
-        <script src="./resources/functions.js"></script>
-        <script src="./resources/ol.js"></script>
-        <script src="./resources/ol-layerswitcher.js"></script>
-        <script src="resources/photon-geocoder-autocomplete.min.js"></script>
-        <script src="layers/PropertyValuationsPolygons_1.js"></script><script src="layers/PropertyValuations_2.js"></script>
-        <script src="styles/PropertyValuationsPolygons_1_style.js"></script><script src="styles/PropertyValuations_2_style.js"></script>
-        <script src="./layers/layers.js" type="text/javascript"></script> 
-        <script src="./resources/Autolinker.min.js"></script>
-        <script src="./resources/qgis2web.js"></script>        
+            <script src="resources/qgis2web_expressions.js"></script>
+            <script src="./resources/functions.js"></script>
+            <script src="./resources/ol.js"></script>
+            <script src="./resources/ol-layerswitcher.js"></script>
+            <script src="resources/photon-geocoder-autocomplete.min.js"></script>
+            <script src="layers/PropertyValuationsPolygons_1.js"></script><script src="layers/PropertyValuations_2.js"></script><script src="./resources/selected-property.js"></script>
+            <script src="styles/PropertyValuationsPolygons_1_style.js"></script><script src="styles/PropertyValuations_2_style.js"></script>
+            <script src="./layers/layers.js" type="text/javascript"></script> 
+            <script src="./resources/Autolinker.min.js"></script>
+            <script src="./resources/qgis2web.js"></script>  
+
+
+            <!--Grid column 2-->
+            <div class="sidebar">
+                <h1>Land Value Tax Calculator</h1>
+                <p class="sidebar-intro">On this website you can see an estimate for the value of land plots in the UK. These values have been calculated using open source data and statistical analysis.</p>
+
+                <!-- Selected property mirror (populated from map popup / feature click) -->
+                <section id="selected-info" class="selected-info" aria-live="polite">
+                    <h2>Selected property</h2>
+                    <div id="selected-content">
+                        <p class="empty">Click a property on the map to see details here.</p>
+                    </div>
+                </section>
+            </div>  
+        </div>    
     </body>
 </html>
+
 
 
