--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
                         <p>Land Value Tax (LVT) is a levy on the unimproved value of land, excluding buildings and other developments. Unlike Council Tax, it cannot be avoided by leaving land idle, and is widely regarded by economists as an efficient and equitable form of taxation.</p>
 
                         <h4>Methodology</h4>
-                        <p>Land values were estimated using two complementary approaches applied to 1,586 properties with known sale prices: a hedonic regression model estimating the marginal contribution of location, plot size, and accessibility to price (R² = 0.41); and a gradient boosting model using feature importance scores (R² = 0.64). Results were averaged to produce a combined land value estimate. LVT equivalents for each tax were calculated by dividing total regional tax revenues (Council Tax: £353m; LBTT: £53m) by estimated total regional land value (£26.6bn), producing a rate per £1,000 of land value applied to each property proportionally.</p>
+                        <p>Land values were estimated using a residual method. For each of 1,586 properties with known sale prices, building replacement cost was estimated based on property type, floor area, and construction characteristics. Land value was then derived as the residual — the transaction price minus the estimated building cost. A gradient boosting model was trained on these residual land values using only land-intrinsic features: location, plot area, distance to amenities, flood risk, and local income levels. This approach avoids contaminating land value estimates with building quality and achieves an in-sample R² of 0.919, producing a total estimated regional land value of £15.2bn (median: £95k per property; Gini coefficient: 0.302). Land shares vary plausibly by property type, ranging from a median of 41% for detached houses to 56% for flats. LVT equivalent rates are calculated by dividing total regional tax revenues (Council Tax: £353m; LBTT: £53m) by total estimated land value, producing annual rates of 2.33% and 2.68% respectively, applied proportionally to each property's estimated land value. <a href="#" id="methodology-link" style="color: #2563eb;">View detailed analysis ↗</a></p>
 
                         <h4>Next Steps</h4>
-                        <p>This pilot covers Aberdeen and Aberdeenshire. Future development aims to extend the analysis across Scotland and ultimately the rest of the UK, incorporate additional taxes beyond property-based levies — including income tax — to give a fuller picture of what a shift to LVT might mean in practice, and refine the underlying land value estimation methodology.</p>
+                        <p>This pilot covers Aberdeen and Aberdeenshire. Future development aims to extend the analysis across Scotland and ultimately the rest of the UK, incorporate additional taxes beyond property-based levies — including income tax — to give a fuller picture of what a shift to LVT might mean in practice, and refine the underlying land value estimation methodology using EPC data for improved building cost estimates.</p>
 
                         <h4>Acknowledgements</h4>
                         <p>Transaction data: Registers of Scotland. Tax revenue data: Aberdeen City Council, Aberdeenshire Council, and Scottish Revenue. Accessibility and demographic data: Scottish Government and Ordnance Survey.</p>
@@ -174,8 +174,31 @@
         </div>
     </footer>
 
+    <!-- Lightbox for methodology image -->
+    <div id="methodologyLightbox" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.85); z-index:9999; align-items:center; justify-content:center;">
+        <div style="position:relative; max-width:95vw; max-height:95vh;">
+            <button onclick="document.getElementById('methodologyLightbox').style.display='none';" style="position:absolute; top:-36px; right:0; background:none; border:none; color:white; font-size:28px; cursor:pointer; line-height:1;">✕</button>
+            <img src="land_value_revised_analysis.png" alt="Revised Land Value Analysis" style="max-width:95vw; max-height:90vh; border-radius:6px; display:block;">
+        </div>
+    </div>
+
     <script src="https://unpkg.com/maplibre-gl@4/dist/maplibre-gl.js"></script>
     <script src="https://unpkg.com/pmtiles@3/dist/pmtiles.js"></script>
     <script src="app.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var link = document.getElementById('methodology-link');
+            var lightbox = document.getElementById('methodologyLightbox');
+            if (link && lightbox) {
+                link.addEventListener('click', function(e) {
+                    e.preventDefault();
+                    lightbox.style.display = 'flex';
+                });
+                lightbox.addEventListener('click', function(e) {
+                    if (e.target === lightbox) lightbox.style.display = 'none';
+                });
+            }
+        });
+    </script>
 </body>
 </html>
